New page and images

--- a/best-practices.html
+++ b/best-practices.html
@@ -80,27 +80,7 @@
 								<a href="company.html" class="nav-link">Company</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"> 
-										<a href="mortgage-refinance.html" class="nav-link">Mortgage Refinance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="personal-loan.html" class="nav-link">Personal Loan</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="solar.html" class="nav-link">Solar</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="home-services.html" class="nav-link">Home Services</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="homeowners-insurance.html" class="nav-link">Homeowners Insurance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="real-estate.html" class="nav-link">Real Estate</a>
-									</li>
-								</ul>
+								<a href="industries.html" class="nav-link">Industries</a>
 							</li>
 							<li class="nav-item"> 
 								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
@@ -161,75 +141,96 @@
 
 			<div class="services-details-overview">
 
-				<div class="row align-items-top">
-
-					<div class="col-lg-5 col-md-12 col-sm-12">
-
-						<div class="about-image">
-							
-							<div class="services-step-title">
-
-								<h2>Best Practices</h2>
-
-							</div>
-
-							<img src="assets/img/b-03.jpg" alt="image">
-
-						</div>
-
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<h2>Best Practices to Maximize Your <span class="color-text">Mega Pipelines</span> Access</h2>
+						<p>We at Mega Pipelines want all of our customers or realize a mega ROI on their investment in the Mega Pipelines system.  To help you get he most out of your subscription, we have provided some of the best practices used by leaders in sales.</p>
 					</div>
+				</div>
 
-					<div class="col-lg-7 col-md-12 col-sm-12">
-
-						<div class="services-step-wrapper">
-
-
-							<div class="services-step-content">
-
-								<p>We at Mega Pipelines want all of our customers or realize a mega ROI on their investment in the Mega Pipelines system.  To help you get he most out of your subscription, we have provided some of the best practices used by leaders in sales.</p>
-
-								<div class="features-text">
-
-									<h4>1. Establish a script that sets you apart. Win the early seconds of the conversation.</h4>
-
-									<p>You have 5 seconds to get someone’s attention, and let them know you are genuinely there to serve them and solve their problems.  If you do a good job in those 5 seconds, you earn 20 more seconds to further develop a relationship between strangers.</p>
-
-									<p>If you do a good job in those 20 seconds, you earn another 60 seconds to 2 minutes to shift from breaking the ice to persuading them to do business with you.  The rest is downhill.</p>
-
-									<h4>2. Teach someone else how to fish.</h4>
-
-									<p>You could do all the prospecting in the Mega Pipelines system, however that would mean you are taking time away from you doing what you do best–selling.  Our recommendation is to come up with a unique way to get the customer to hear your pitch, and then teach someone else how to do the beginning of the pitch–freeing up your time so you are only talking to the people who have passed the first threshold.</p>
-
-									<h4>3. Making your customers refer you to other customers a religion.</h4>
-
-									<p>There are multiplicative effects of using Mega Pipelines, and those effects come from the downstream of referrals you get by servicing each customer you get through Mega Pipelines.  The best sales people typically get 2 referrals per customer they acquire from our system, and furthermore, they get repeat business from 60%+ of the customers they meet through Mega Pipelines.  These multipliers make the power of Mega Pipelines even greater.  Make sure you make a concerted effort to remind your clients of the value you provided, and that referrals to friends, family or neighbors of some of those key values are what matter to you growing your business.</p>
-
-									<h4>4. Find your niche and own it.</h4>
-
-									<p>Mega Pipelines lets you target leads according to a myriad of characteristics that let you create niches that you can fully own.  These niches could be geographic (zip codes, cities or states), specific product types (like in mortgage–VA or FHA), or niche vertically by providing multiple services such as homeowners insurance and mortgage financing, or real estate and mortgage financing.  Any way you decide to create a niche, know that the better you focus, the more likely you are going to have massive success.  We at Mega Pipelines give you the ability to make the niche that matters most to your soon to be massive success.</p>
-
-									<h4>5. Find others that could benefit from Mega Pipelines, and create a Team account.</h4>
-
-									<p>The U.S. market is huge, and the best users on Mega Pipelines realize they cannot cover it all.  Therefore, they typically find several others in other niches or regions, and create a Team account to reduce each person’s cost to use the system.  By going to a Team account you can reduce your cost to use Mega Pipelines by an additional 5%, as well as share other costs to make even more money from our platform.</p>
-
-									<h4>6. Commit and scale.</h4>
-
-									<p>The sooner you can find a workflow that is effective, you should immediately make the decision to commit to a longer term agreement with Mega Pipelines.  We have a well oiled machine to make sure the data quality stays consistently good, and with consistently growing volume, therefore you can focus your scale on operations, not technology and data.</p>
-
-									<h4>7. Know your goal and get it.</h4>
-
-									<p>Calling on leads takes a special skill set, and though we created Mega Pipelines so you can easily make an ROI on your monthly expenditure, you have to put in the work.  Go into this program with some goals in mind around number of attempts per day, number of applicants or opportunities you’ll look to get per day/week, and what kind of results you hope to achieve through this undertaking.  You might find you surpass them quite easily!</p>
-
-									<p>These are just some of the best practices that our customers at Mega Pipelines have implemented to become leaders in the platform and leaders in sales in their organizations.  What are you waiting for?  Get started on our free trial and make this year a Mega year.</p>
-
-								</div>
-
-							</div>
-
-						</div>
-
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<h4 class="color-text">Establish a script that sets you apart. Win the early seconds of the conversation.</h4>
+						<p>You have 5 seconds to get someone’s attention, and let them know you are genuinely there to serve them and solve their problems.  If you do a good job in those 5 seconds, you earn 20 more seconds to further develop a relationship between strangers.</p>
+						<p>If you do a good job in those 20 seconds, you earn another 60 seconds to 2 minutes to shift from breaking the ice to persuading them to do business with you.  The rest is downhill.</p>
+					</div>	
+					<div class="col-lg-6">
+						<img src="assets/img/best-1.svg" alt="image">
 					</div>
+				</div>
 
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<img src="assets/img/best-2.svg" alt="image">
+					</div>
+					<div class="col-lg-6">
+						<h4 class="color-text">Teach someone else how to fish.</h4>
+
+						<p>You could do all the prospecting in the Mega Pipelines system, however that would mean you are taking time away from you doing what you do best–selling.  Our recommendation is to come up with a unique way to get the customer to hear your pitch, and then teach someone else how to do the beginning of the pitch–freeing up your time so you are only talking to the people who have passed the first threshold.</p>
+
+					</div>	
+				</div>
+
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<h4 class="color-text">Making your customers refer you to other customers a religion.</h4>
+
+						<p>There are multiplicative effects of using Mega Pipelines, and those effects come from the downstream of referrals you get by servicing each customer you get through Mega Pipelines.  The best sales people typically get 2 referrals per customer they acquire from our system, and furthermore, they get repeat business from 60%+ of the customers they meet through Mega Pipelines.  These multipliers make the power of Mega Pipelines even greater.  Make sure you make a concerted effort to remind your clients of the value you provided, and that referrals to friends, family or neighbors of some of those key values are what matter to you growing your business.</p>
+
+					</div>	
+					<div class="col-lg-6">
+						<img src="assets/img/best-3.svg" alt="image">
+					</div>
+				</div>
+
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<img src="assets/img/best-4.svg" alt="image">
+					</div>
+					<div class="col-lg-6">
+						<h4 class="color-text">Find your niche and own it.</h4>
+
+						<p>Mega Pipelines lets you target leads according to a myriad of characteristics that let you create niches that you can fully own.  These niches could be geographic (zip codes, cities or states), specific product types (like in mortgage–VA or FHA), or niche vertically by providing multiple services such as homeowners insurance and mortgage financing, or real estate and mortgage financing.  Any way you decide to create a niche, know that the better you focus, the more likely you are going to have massive success.  We at Mega Pipelines give you the ability to make the niche that matters most to your soon to be massive success.</p>
+
+					</div>	
+				</div>
+
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<h4 class="color-text">Find others that could benefit from Mega Pipelines, and create a Team account.</h4>
+
+						<p>The U.S. market is huge, and the best users on Mega Pipelines realize they cannot cover it all.  Therefore, they typically find several others in other niches or regions, and create a Team account to reduce each person’s cost to use the system.  By going to a Team account you can reduce your cost to use Mega Pipelines by an additional 5%, as well as share other costs to make even more money from our platform.</p>
+
+					</div>	
+					<div class="col-lg-6">
+						<img src="assets/img/best-5.svg" alt="image">
+					</div>
+				</div>
+
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<img src="assets/img/best-6.svg" alt="image">
+					</div>
+					<div class="col-lg-6">
+						<h4 class="color-text">Commit and scale.</h4>
+
+						<p>The sooner you can find a workflow that is effective, you should immediately make the decision to commit to a longer term agreement with Mega Pipelines.  We have a well oiled machine to make sure the data quality stays consistently good, and with consistently growing volume, therefore you can focus your scale on operations, not technology and data.</p>
+
+					</div>	
+				</div>
+
+				<div class="row align-items-center">
+					<div class="col-lg-6">
+						<h4 class="color-text">Know your goal and get it.</h4>
+
+						<p>Calling on leads takes a special skill set, and though we created Mega Pipelines so you can easily make an ROI on your monthly expenditure, you have to put in the work.  Go into this program with some goals in mind around number of attempts per day, number of applicants or opportunities you’ll look to get per day/week, and what kind of results you hope to achieve through this undertaking.  You might find you surpass them quite easily!</p>
+
+						<p>These are just some of the best practices that our customers at Mega Pipelines have implemented to become leaders in the platform and leaders in sales in their organizations.  What are you waiting for?  Get started on our free trial and make this year a Mega year.</p>
+
+					</div>	
+					<div class="col-lg-6">
+						<img src="assets/img/best-7.svg" alt="image">
+					</div>
 				</div>
 
 			</div>
@@ -276,7 +277,7 @@
 							<li><a href="product.html">Product</a></li>
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="faq.html">FAQs</a></li>
-							<li><a href="#">Industries</a></li>
+							<li><a href="industries.html">Industries</a></li>
 							<li><a href="https://account.megapipelines.com/#/login">Register or Sign In</a></li>
 						</ul>
 					</div>
