--- a/integrated-dialer.html
+++ b/integrated-dialer.html
@@ -80,27 +80,7 @@
 								<a href="company.html" class="nav-link">Company</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"> 
-										<a href="mortgage-refinance.html" class="nav-link">Mortgage Refinance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="personal-loan.html" class="nav-link">Personal Loan</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="solar.html" class="nav-link">Solar</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="home-services.html" class="nav-link">Home Services</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="homeowners-insurance.html" class="nav-link">Homeowners Insurance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="real-estate.html" class="nav-link">Real Estate</a>
-									</li>
-								</ul>
+								<a href="industries.html" class="nav-link">Industries</a>
 							</li>
 							<li class="nav-item"> 
 								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
@@ -236,7 +216,7 @@
 							<li><a href="product.html">Product</a></li>
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="faq.html">FAQs</a></li>
-							<li><a href="#">Industries</a></li>
+							<li><a href="industries.html">Industries</a></li>
 							<li><a href="https://account.megapipelines.com/#/login">Register or Sign In</a></li>
 						</ul>
 					</div>
