--- a/verification-process.html
+++ b/verification-process.html
@@ -80,27 +80,7 @@
 								<a href="company.html" class="nav-link">Company</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"> 
-										<a href="mortgage-refinance.html" class="nav-link">Mortgage Refinance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="personal-loan.html" class="nav-link">Personal Loan</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="solar.html" class="nav-link">Solar</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="home-services.html" class="nav-link">Home Services</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="homeowners-insurance.html" class="nav-link">Homeowners Insurance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="real-estate.html" class="nav-link">Real Estate</a>
-									</li>
-								</ul>
+								<a href="industries.html" class="nav-link">Industries</a>
 							</li>
 							<li class="nav-item"> 
 								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
@@ -182,48 +162,51 @@
 
 			<div class="services-details-overview">
 
-				<div class="row align-items-top">
-
-					<div class="col-lg-5 col-md-12 col-sm-12">
-
-						<div class="about-image">
-							
-							<div class="services-step-title">
-
-								<h2>Lead Verification Process</h2>
-
-							</div>
-
-							<img src="assets/img/b-04.jpg" alt="image">
-
-						</div>
-
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<h2>Maximize Your Value from Our <span class="color-text">Data Verification Process</span></h2>
+						<p>You know that not all leads are created equal. You also know that garbage in usually equals garbage out. Both of those things in mind were our northern stars at helping us make the best possible sales lead generation product on the market here at Mega Pipelines.</p>
 					</div>
+				</div>
 
-					<div class="col-lg-7 col-md-12 col-sm-12">
-
-						<div class="services-step-wrapper">
-
-							<div class="services-step-content">
-
-								<p>You know that not all leads are created equal.  You also know that garbage in usually equals garbage out.  Both of those things in mind were our northern stars at helping us make the best possible sales lead generation product on the market here at Mega Pipelines.</p>
-
-								<div class="features-text">
-
-									<p>It all starts with our lead curating process.  We have tens of partnerships with lead generators in various industry verticals.  We acquire in bulk the lead data in the secondary market, and then we get to work.  From point of acquisition, we then verify all the data about the lead, including the phone number ownership, the property characteristics, and any other characteristic that we can verify to reassure the information is accurate and reliable.</p>
-
-									<p>Only after it goes through our verification process, we load the data into Mega Pipelines for our customers to reap the benefits of our data cleansing and verification.  This isn’t a cheap process–but it is well worth it to not only you, but all of our customers who rely on the Mega Pipelines product.</p>
-
-									<p>Not yet a customer, and still have questions about Mega Pipelines lead quality?  Sign up for a free trial of the system and see for yourselves how good is the Mega Pipelines lead data quality.</p>
-
-								</div>
-
-							</div>
-
-						</div>
-
+				<div class="row align-items-center">
+					<div class="col-lg-6 col-md-12">
+						<h2 class="color-text">1</h4>
+						<p>It all starts with our lead curating process. We have tens of partnerships with lead generators in various industry verticals. We acquire in bulk the lead data in the secondary market, and then we get to work.</p>
+					</div>	
+					<div class="col-lg-6 col-md-12">
+						<img src="assets/img/vp-1.svg" alt="image">
 					</div>
+				</div>
 
+				<div class="row align-items-center">
+					<div class="col-lg-6 col-md-12">
+						<img src="assets/img/vp-2.svg" alt="image">
+					</div>
+					<div class="col-lg-6 col-md-12">
+						<h2 class="color-text">2</h4>
+						<p>From point of acquisition, we then verify all the data about the lead, including the phone number ownership, the property characteristics, and any other characteristic that we can verify to reassure the information is accurate and reliable.</p>
+					</div>	
+				</div>
+
+				<div class="row align-items-center">
+					<div class="col-lg-6 col-md-12">
+						<h2 class="color-text">3</h4>
+						<p>These are all opt in leads, however we go further.  We remove all known litigators, and we suppress the lead against the National Do Not Call List so you can feel more confident in your efforts.</p>
+					</div>	
+					<div class="col-lg-6 col-md-12">
+						<img src="assets/img/vp-3.svg" alt="image">
+					</div>
+				</div>
+
+				<div class="row align-items-center">
+					<div class="col-lg-6 col-md-12">
+						<img src="assets/img/vp-4.svg" alt="image">
+					</div>
+					<div class="col-lg-6 col-md-12">
+						<h2 class="color-text">4</h4>
+						<p>Only after it goes through our verification process, we load the data into Mega Pipelines for our customers to reap the benefits of our data cleansing and verification.</p>
+					</div>	
 				</div>
 
 			</div>
@@ -270,7 +253,7 @@
 							<li><a href="product.html">Product</a></li>
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="faq.html">FAQs</a></li>
-							<li><a href="#">Industries</a></li>
+							<li><a href="industries.html">Industries</a></li>
 							<li><a href="https://account.megapipelines.com/#/login">Register or Sign In</a></li>
 						</ul>
 					</div>
