--- a/product.html
+++ b/product.html
@@ -80,27 +80,7 @@
 								<a href="company.html" class="nav-link">Company</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"> 
-										<a href="mortgage-refinance.html" class="nav-link">Mortgage Refinance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="personal-loan.html" class="nav-link">Personal Loan</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="solar.html" class="nav-link">Solar</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="home-services.html" class="nav-link">Home Services</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="homeowners-insurance.html" class="nav-link">Homeowners Insurance</a>
-									</li>
-									<li class="nav-item"> 
-										<a href="real-estate.html" class="nav-link">Real Estate</a>
-									</li>
-								</ul>
+								<a href="industries.html" class="nav-link">Industries</a>
 							</li>
 							<li class="nav-item"> 
 								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
@@ -153,43 +133,28 @@
 
 	<section class="about-area section-padding">
 
-		<div class="container">
+		<div class="container row-space">
+
+			<div class="row ">
+				<div class="col-lg-12 col-md-12 text-center">
+					<h2><span class="color-text">We Removed Complexity</span></h2>
+					<h2>So You Can Focus on Selling</h2>
+				</div>
+			</div>
 
 			<div class="row d-flex align-items-center">
 
-				<div class="col-lg-7 col-md-12 col-sm-12">
+				<div class="col-lg-6 col-md-12 col-sm-12">
 
 					<div class="about-content">
 
 						<div class="about-content-text">
-							<h2>Getting <span class="color-text">Started</span></h2>
-							<p><b>|.</b> We curate leads from a number of different sources and then validate them using public records, telephony verification and we scrub it against Do Not Call and other blacklists and known litigators.  We have designed the system so you stay TCPA compliant.</p>
-							<p><b>2.</b> We load those leads into Mega Pipelines as soon as we have them refined via our lead curation process.</p>
-							<p><b>3.</b> We set you up with a phone number that we constantly screen to reassure it doesn’t get marked as a spam caller.</p>
-							<p><b>4.</b> You filter through the leads and focus on the geographic areas, products and specializations that you serve the best.</p>
-							<p><b>5.</b> You start calling with confidence, with no need to set up dialers, or hope that the lead information is accurate.</p>
-							<p><b>6.</b> You win business.</p>
-							<p>We do this for Unlimited Leads and since we have priced this service on a flat cost per month, we made it easier than ever for you to grow your business.</p>
+							<h2>First, We Select From <span class="color-text">The Best </span></h2>
 
-							<p>No risk to start, get 50 free dials for free just by signing up.</p>
-
-							<h2>Ready to <span class="color-text">Scale?</span></h2>
-
-							<p><b>1.</b> Switch from an Individual account to a Team account and save money per Dialer seat.</p>
-							<p><b>2.</b> Hire a Dialer or a team of Dialers to do the calling for you, and design a process for them to transfer you the customers that fit your more specific criteria.</p>
-							<p><b>3.</b> Add additional sales people under your account and become an account Administrator.</p>
-							<p>Once again, Unlimited leads, simple set up, and simple ability to scale.</p>
-							<p>No risk to start, get 50 dials for free just by signing up.</p>
-							<h2>What do you need to <span class="color-text">Get Started?</span></h2>
-							<p>Just a computer, mouse, keyboard, microphone, and a speaker–although we prefer if you have a headset so you can work more rapidly at getting business.</p>
-
-							<p>Have more questions?  Check out our <a href="faq.html">FAQs page</a>, or <a href="contact.html">Contact Us</a>.</p>
-							<a class="default-btn" href="registration.html">
-
-                            Try It Free
-
-                            </a>
-							<p><small>50 free dials are for only 1 Dialer per account.  Users are only permitted to have 1 account.  All users are subject to the Terms and Conditions of the Mega Pipelines product and service.  Adding an additional Dialer forfeits your 50 free dials, and you will automatically become a paid account.</small></p>
+							<p>We curate leads from a number of different sources and then validate them using public records, telephony verification and then we scrub it against Do Not Call and other blacklists and known litigators.</p> 
+							<p>We have designed the system so you can stay TCPA compliant.</p>
+							<p>We load leads constantly into Mega Pipelines as soon as we refined them via our lead curation process.</p>
+							<p>Read about our <a href="verification-process.html">Verification Process</a></p>
 
 						</div>
 
@@ -197,12 +162,11 @@
 
 				</div>
 
-				<div class="col-lg-5 col-md-12 col-sm-12">
+				<div class="col-lg-6 col-md-12 col-sm-12">
 
 					<div class="about-image">
 
-						<img src="assets/img/b-12.jpg" alt="About image">
-						<img src="assets/img/b-13.jpg" alt="About image">
+						<img src="assets/img/coder.svg" alt="Coder image">
 
 					</div>
 
@@ -210,7 +174,82 @@
 
 			</div>
 
+			<div class="row d-flex align-items-center">
+
+				<div class="col-lg-6 col-md-12 col-sm-12">
+
+					<div class="about-image">
+
+						<img src="assets/img/chat.svg" alt="Chat image">
+
+					</div>
+
+				</div>
+
+				<div class="col-lg-6 col-md-12 col-sm-12">
+
+					<div class="about-content">
+
+						<div class="about-content-text">
+
+							<h2>We Set You Up For <span class="color-text">Success</span></h2>
+							<p>We are telephony tech experts at heart.  We set you up with a phone number that we constantly evaluate to reassure it doesn’t get marked as a spam caller.</p> 
+							<p>You filter through the leads and focus on the geographic areas, products and specializations that you serve the best.</p>
+							<p>More questions, read our <a href="faq.html">FAQs</a></p>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="row d-flex align-items-center">
+
+				<div class="col-lg-6 col-md-12 col-sm-12">
+
+					<div class="about-content">
+
+						<div class="about-content-text">
+
+							<h2>You <span class="color-text">Make Results</span> Happen</h2>
+
+							<p>You start calling with confidence, with no need to set up Dialers, or hope that the lead information is accurate.</p>
+							<p>You win business.</p>
+							<p>See what <span style="text-decoration: underline;">industries we create success</span></p>
+
+						</div>
+
+					</div>
+
+				</div>
+
+
+				<div class="col-lg-6 col-md-12 col-sm-12">
+
+					<div class="about-image">
+
+						<img src="assets/img/target.svg" alt="About image">
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="row space-top">
+				<div class="col-lg-12 col-md-12">
+					<h6>We do this for Unlimited Leads and since we offer this service on a flat cost per month, we made it easier than ever for you to grow your business.</h6>
+					<h4>No risk to start, get 50 free dials for free just by signing up.</h4>
+					<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
+				</div>
+			</div>
+
 		</div>
+
+
+
 
 	</section>
 
@@ -278,7 +317,7 @@
 							<li><a href="product.html">Product</a></li>
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="faq.html">FAQs</a></li>
-							<li><a href="#">Industries</a></li>
+							<li><a href="industries.html">Industries</a></li>
 							<li><a href="https://account.megapipelines.com/#/login">Register or Sign In</a></li>
 						</ul>
 					</div>
