Change on contact us

--- a/best-practices.html
+++ b/best-practices.html
@@ -137,7 +137,7 @@
 
 	<section class="services-details-area ptb-100">
 
-		<div class="container">
+		<div class="container verification-images">
 
 			<div class="services-details-overview">
 
@@ -154,13 +154,13 @@
 						<p>You have 5 seconds to get someone’s attention, and let them know you are genuinely there to serve them and solve their problems.  If you do a good job in those 5 seconds, you earn 20 more seconds to further develop a relationship between strangers.</p>
 						<p>If you do a good job in those 20 seconds, you earn another 60 seconds to 2 minutes to shift from breaking the ice to persuading them to do business with you.  The rest is downhill.</p>
 					</div>	
-					<div class="col-lg-6">
+					<div class="col-lg-6 justify-content-center">
 						<img src="assets/img/best-1.svg" alt="image">
 					</div>
 				</div>
 
 				<div class="row align-items-center">
-					<div class="col-lg-6">
+					<div class="col-lg-6 justify-content-center">
 						<img src="assets/img/best-2.svg" alt="image">
 					</div>
 					<div class="col-lg-6">
@@ -178,13 +178,13 @@
 						<p>There are multiplicative effects of using Mega Pipelines, and those effects come from the downstream of referrals you get by servicing each customer you get through Mega Pipelines.  The best sales people typically get 2 referrals per customer they acquire from our system, and furthermore, they get repeat business from 60%+ of the customers they meet through Mega Pipelines.  These multipliers make the power of Mega Pipelines even greater.  Make sure you make a concerted effort to remind your clients of the value you provided, and that referrals to friends, family or neighbors of some of those key values are what matter to you growing your business.</p>
 
 					</div>	
-					<div class="col-lg-6">
+					<div class="col-lg-6 justify-content-center">
 						<img src="assets/img/best-3.svg" alt="image">
 					</div>
 				</div>
 
 				<div class="row align-items-center">
-					<div class="col-lg-6">
+					<div class="col-lg-6 justify-content-center">
 						<img src="assets/img/best-4.svg" alt="image">
 					</div>
 					<div class="col-lg-6">
@@ -202,13 +202,13 @@
 						<p>The U.S. market is huge, and the best users on Mega Pipelines realize they cannot cover it all.  Therefore, they typically find several others in other niches or regions, and create a Team account to reduce each person’s cost to use the system.  By going to a Team account you can reduce your cost to use Mega Pipelines by an additional 5%, as well as share other costs to make even more money from our platform.</p>
 
 					</div>	
-					<div class="col-lg-6">
+					<div class="col-lg-6 justify-content-center">
 						<img src="assets/img/best-5.svg" alt="image">
 					</div>
 				</div>
 
 				<div class="row align-items-center">
-					<div class="col-lg-6">
+					<div class="col-lg-6 justify-content-center">
 						<img src="assets/img/best-6.svg" alt="image">
 					</div>
 					<div class="col-lg-6">
@@ -228,7 +228,7 @@
 						<p>These are just some of the best practices that our customers at Mega Pipelines have implemented to become leaders in the platform and leaders in sales in their organizations.  What are you waiting for?  Get started on our free trial and make this year a Mega year.</p>
 
 					</div>	
-					<div class="col-lg-6">
+					<div class="col-lg-6 justify-content-center">
 						<img src="assets/img/best-7.svg" alt="image">
 					</div>
 				</div>
