--- a/verification-process.html
+++ b/verification-process.html
@@ -158,7 +158,7 @@
 
 	<section class="services-details-area ptb-100">
 
-		<div class="container">
+		<div class="container verification-images">
 
 			<div class="services-details-overview">
 
@@ -174,13 +174,13 @@
 						<h2 class="color-text">1</h4>
 						<p>It all starts with our lead curating process. We have tens of partnerships with lead generators in various industry verticals. We acquire in bulk the lead data in the secondary market, and then we get to work.</p>
 					</div>	
-					<div class="col-lg-6 col-md-12">
+					<div class="col-lg-6 col-md-12 justify-content-center">
 						<img src="assets/img/vp-1.svg" alt="image">
 					</div>
 				</div>
 
 				<div class="row align-items-center">
-					<div class="col-lg-6 col-md-12">
+					<div class="col-lg-6 col-md-12 justify-content-center">
 						<img src="assets/img/vp-2.svg" alt="image">
 					</div>
 					<div class="col-lg-6 col-md-12">
@@ -194,19 +194,27 @@
 						<h2 class="color-text">3</h4>
 						<p>These are all opt in leads, however we go further.  We remove all known litigators, and we suppress the lead against the National Do Not Call List so you can feel more confident in your efforts.</p>
 					</div>	
-					<div class="col-lg-6 col-md-12">
+					<div class="col-lg-6 col-md-12 justify-content-center">
 						<img src="assets/img/vp-3.svg" alt="image">
 					</div>
 				</div>
 
 				<div class="row align-items-center">
-					<div class="col-lg-6 col-md-12">
+					<div class="col-lg-6 col-md-12 justify-content-center">
 						<img src="assets/img/vp-4.svg" alt="image">
 					</div>
 					<div class="col-lg-6 col-md-12">
 						<h2 class="color-text">4</h4>
 						<p>Only after it goes through our verification process, we load the data into Mega Pipelines for our customers to reap the benefits of our data cleansing and verification.</p>
 					</div>	
+				</div>
+
+				<div class="row space-top">
+					<div class="col-lg-12 col-md-12">
+						<h6>We do this for Unlimited Leads and since we offer this service on a flat cost per month, we made it easier than ever for you to grow your business.</h6>
+						<h4>No risk to start, get 50 free dials for free just by signing up.</h4>
+						<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
+					</div>
 				</div>
 
 			</div>
