--- a/contact.html
+++ b/contact.html
@@ -115,41 +115,21 @@
 			</div>
 		</div>
 	</div>
-
-	
-
-	<!-- Start Page Title Area -->
-
 	<div class="page-title-area">
-
 		<div class="d-table">
-
 			<div class="d-table-cell">
-
 				<div class="container">
-
 					<div class="page-title-content">
-
 						<h2>Contact Us</h2>
-
 						<ul>
-
 							<li><a href="index.html">Home</a>
-
 							</li>
-
 							<li>Contact</li>
-
 						</ul>
-
 					</div>
-
 				</div>
-
 			</div>
-
 		</div>
-
 	</div>
 
 	<!-- End Page Title Area -->
@@ -157,11 +137,8 @@
 	<!-- Start Contact Section -->
 
 	<div class="contact-section section-padding">
-
 		<div class="container">
-
 			<div class="row">
-
 				<div class="col-lg-4 col-md-12">
 
                     <div class="contact-information-box-3">
@@ -230,77 +207,55 @@
                     </div>
 
 				</div>
-
 				<div class="col-lg-8 col-md-12">
 
-					<div class="contact-form contact-form-3">
-
-						<p class="form-message"></p>
-
-						<form id="contact-form" class="form" action="phpmail.php" method="POST">
-
-							<div class="row">
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="text" name="name" id="name" class="form-control" required placeholder="Your Name"> </div>
-
-								</div>
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="email" name="email" id="email" class="form-control" required placeholder="Your Email"> </div>
-
-								</div>
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="text" name="phone" id="phone" required class="form-control" placeholder="Your Phone"> </div>
-
-								</div>
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="text" name="subject" id="subject" class="form-control" required placeholder="Your Subject"> </div>
-
-								</div>
-
-								<div class="col-lg-12 col-md-12">
-
-									<div class="form-group">
-
-										<textarea name="message" class="form-control" id="message" cols="30" rows="6" required placeholder="Your Message"></textarea>
-
-									</div>
-
-								</div>
-
-								<div class="col-lg-12 col-md-12">
-
-									<button type="submit" class="default-btn">Send Message <span></span></button>
-
-								</div>
-
-							</div>
-
-						</form>
-
+					<div id="success" style="padding:10px;">
+						<div class="contact-info">
+							<h6>Form Data Submitted :)</h6>
+							<p>Your message is under review and will be assigned to the correct team.</p>
+							<p>A <b>Mega Pipelines Representative</b> will be in touch with you soon.</p>
+						</div>
 					</div>
 
+					<div class="contact-form contact-form-3">
+						<form id="contact" class="form" method="post" action="javascript:;" onsubmit="send(this)">
+							<div class="row">
+
+								<input type="hidden" id="time" name="timestamp">
+								<div class="col-lg-6 col-md-12">
+									<div class="form-group">
+										<input type="text" name="name" class="form-control" required placeholder="Your Name">
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-12">
+									<div class="form-group">
+										<input type="email" name="email" class="form-control" required placeholder="Your Email">
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-12">
+									<div class="form-group">
+										<input type="text" name="phone" class="form-control" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');" required placeholder="Your Phone">
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-12">
+									<div class="form-group">
+										<input type="text" name="subject" class="form-control" required placeholder="Your Subject">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-group">
+										<textarea name="message" class="form-control" cols="30" rows="6" required placeholder="Your Message"></textarea>
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<input type="submit" class="default-btn" value="Send Message">
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
-
 			</div>
-
 		</div>
-
 	</div>
 
 	<!-- End Contact Section -->
@@ -425,7 +380,10 @@
 		<i class="fas fa-chevron-up"></i>
 	</div>
 </body>
-<script src="assets/js/jquery.min.js"></script>
+<script
+src="https://code.jquery.com/jquery-3.4.1.js"
+integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+crossorigin="anonymous"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery.meanmenu.js"></script>
 <script src="assets/js/jquery.appear.min.js"></script>
@@ -438,4 +396,24 @@
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/ajax.mail.js"></script>
 <script src="assets/js/main.js"></script>
+<script type="text/javascript">
+
+	var date = new Date();
+	document.getElementById('time').value = date;
+
+	function send() {
+		$.ajax({
+			url:"https://api.apispreadsheets.com/data/1m8kj4gOYFmYDXqk/",
+			type:"post",
+			data:$("#contact").serializeArray(),
+			success: function(){
+				$("#contact").css("display","none");
+				$("#success").css("display","block");
+			},
+			error: function(){
+				alert("There was an error :(")
+			}
+		});
+	}
+</script>
 </html>
