--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
  									<li class="nav-item">
 										<a href="integrated-dialer.html" class="nav-link">Integrated Dialer</a>
 									</li>
+ 									<li class="nav-item">
+										<a href="verification-process.html" class="nav-link">Lead Verification</a>
+									</li>
 								</ul>
 							</li>
 							<li class="nav-item">
@@ -135,7 +138,7 @@
 
 								<h1>With Mega Pipelines, <span class="color-text">grow your sales, not your lead budget</span></h1>
 
-								<p>Call <span style="text-decoration: underline;">unlimited</span>, high-quality, opt-in, sales leads for as low as $2,200 a month through our system.  No software and start today.</p>
+								<p>Call <span style="text-decoration: underline;">unlimited</span>, high-quality, DNC and TCPA compliant, opt-in, sales leads for as low as $2,200 a month through our system. No software and start today.</p>
 
 								<div class="banner-btn">
 
