--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,9 @@
  									<li class="nav-item">
 										<a href="integrated-dialer.html" class="nav-link">Integrated Dialer</a>
 									</li>
+ 									<li class="nav-item">
+										<a href="verification-process.html" class="nav-link">Lead Verification</a>
+									</li>
 								</ul>
 							</li>
 							<li class="nav-item">
