--- a/industries.html
+++ b/industries.html
@@ -100,6 +100,9 @@
  									<li class="nav-item">
 										<a href="integrated-dialer.html" class="nav-link">Integrated Dialer</a>
 									</li>
+ 									<li class="nav-item">
+										<a href="verification-process.html" class="nav-link">Lead Verification</a>
+									</li>
 								</ul>
 							</li>
 							<li class="nav-item">
@@ -245,7 +248,7 @@
 						</div>
 						<div class="col-lg-5 col-md-6 col-sm-12">
 							<div>
-								<img src="assets/img/personal-loan.svg" alt="Personal Loan">
+								<img src="assets/img/solar.svg" alt="Personal Loan">
 							</div>
 						</div>
 					</div>
@@ -273,7 +276,7 @@
 						</div>
 						<div class="col-lg-5 col-md-6 col-sm-12">
 							<div>
-								<img src="assets/img/personal-loan.svg" alt="Personal Loan">
+								<img src="assets/img/repair.svg" alt="Personal Loan">
 							</div>
 						</div>
 					</div>
@@ -301,7 +304,7 @@
 						</div>
 						<div class="col-lg-5 col-md-6 col-sm-12">
 							<div>
-								<img src="assets/img/personal-loan.svg" alt="Personal Loan">
+								<img src="assets/img/home-insurance.svg" alt="Personal Loan">
 							</div>
 						</div>
 					</div>
