New image for vertical

--- a/home-services.html
+++ b/home-services.html
@@ -153,7 +153,7 @@
 
 							</div>
 
-							<img src="assets/img/b-07.jpg" alt="image">
+							<img src="assets/img/repair.svg" alt="image">
 
 						</div>
 
