--- a/mortgage-refinance.html
+++ b/mortgage-refinance.html
@@ -154,7 +154,7 @@
 
 							</div>
 
-							<img src="assets/img/b-09.jpg" alt="image">
+							<img src="assets/img/mortgage.svg" alt="image">
 
 						</div>
 
