--- a/personal-loan.html
+++ b/personal-loan.html
@@ -153,7 +153,7 @@
 
 							</div>
 
-							<img src="assets/img/b-06.jpg" alt="image">
+							<img src="assets/img/personal-loan.svg" alt="image">
 
 						</div>
 
