--- a/real-estate.html
+++ b/real-estate.html
@@ -153,7 +153,7 @@
 
 							</div>
 
-							<img src="assets/img/b-10.jpg" alt="image">
+							<img src="assets/img/real-estate.svg" alt="image">
 
 						</div>
 
