--- a/solar.html
+++ b/solar.html
@@ -153,7 +153,7 @@
 
 							</div>
 
-							<img src="assets/img/b-11.jpg" alt="image">
+							<img src="assets/img/solar.svg" alt="image">
 
 						</div>
 
