--- a/homeowners-insurance.html
+++ b/homeowners-insurance.html
@@ -153,7 +153,7 @@
 
 							</div>
 
-							<img src="assets/img/b-08.jpg" alt="image">
+							<img src="assets/img/home-insurance.svg" alt="image">
 
 						</div>
 
