Fixed issues with email and new 404

--- a/integrated-dialer.html
+++ b/integrated-dialer.html
@@ -149,13 +149,7 @@
 
 						<div class="services-step-image">
 
-							<div class="services-step-title">
-
-								<h2>Our Integrated Dialer</h2>
-
-							</div>
-
-							<img src="assets/img/b-01.jpg" alt="image">
+							<img src="assets/img/integrated-dialer.svg" alt="image">
 
 						</div>
 
@@ -163,7 +157,11 @@
 
 					<div class="col-lg-7 col-md-12 col-sm-12">
 						<div class="services-step-wrapper">
+							<div class="services-step-title">
 
+								<h2>Our Integrated Dialer</h2>
+
+							</div>
 							<div class="services-step-content">
 
 								<p>Our integrated dialer is one of the key resources that make Mega Pipelines better than if you tried to build your own calling system.  We have over 10 years of dialer implementation and phone number management experience that we offer for free as part of using the Mega Pipelines service.  Upon signing up for a Mega Pipelines account, you can select from our series of phone numbers to choose how you want to market yourself–and from there, we implement all the necessary magic to make sure your phone calls are not blocked or flagged as spam to the customers you are calling.   In this era of telecommunications and calling, it is easy to make a mistake implementing a dialer, and we take out all of the challenges, and further, are constantly implementing changes to make sure our customers are performing at peak levels when they use our integrated dialer when calling customers via Mega Pipelines.</p>
