Bug fixes and improvements.

--- a/email.html
+++ b/email.html
@@ -92,6 +92,16 @@
 			color: inherit;
 		}
 
+		.email li {
+		    font-size: 15px;
+		    line-height: 1.8;
+		    color: #5f5f5f;
+		    font-weight: 400;
+		    margin: 0;
+		    letter-spacing: 0.3px;
+		    font-family: 'Cabin', sans-serif;
+		}
+
 		.default {
 		    border: none;
 		    position: relative;
@@ -174,7 +184,7 @@
 	<div class="container">
 		<div class="email">
 			<div class="email-head">
-				<img src="assets/img/logo.png">
+				<img src="https://megapipelines.com/assets/img/logo.png">
 			</div>
 			<div class="email-body">
 				<h2>Grow Your Sales <span>Not Your Lead Budget</span></h2>
@@ -190,15 +200,18 @@
 				<a class="default" target="_blank" href="https://account.megapipelines.com/#/register">Try It Free</a>
 			
 				<p><b>Want to learn more about Mega Pipelines?</b></p>
+				
+				<ul>
+					<li>See how our <a target="_blank" href="https://megapipelines.com/verification-process.html">lead scrubbing and verification process</a> sets us apart</li>
 			
-				<p>See how our <a target="_blank" href="https://megapipelines.com/verification-process.html">lead scrubbing and verification process</a> sets us apart</p>
+					<li>Learn <a target="_blank" href="https://megapipelines.com/best-practices.html">best practices for implementing</a> Mega Pipelines into your sales process</li>
 			
-				<p>Learn <a target="_blank" href="https://megapipelines.com/best-practices.html">best practices for implementing</a> Mega Pipelines into your sales process</p>
+					<li>Learn about our <a target="_blank" href="https://megapipelines.com/integrated-dialer.html">integrated dialing technology</a></li>
 			
-				<p>Learn about our <a target="_blank" href="https://megapipelines.com/integrated-dialer.html">integrated dialing technology</a></p>
-			
-				<p>Do an <a target="_blank" href="https://megapipelines.com/roi-calculator.html">ROI calculation</a> as to how much you can make from our unlimited platform</p>
-				<br>
+					<li>Do an <a target="_blank" href="https://megapipelines.com/roi-calculator.html">ROI calculation</a> as to how much you can make from our unlimited platform</li>
+					
+				</ul>
+
 				<p>See you on the other side.</p>
 				<p>Mega Pipelines</p>
 			</div>
