--- a/product.html
+++ b/product.html
@@ -85,9 +85,7 @@
 							<li class="nav-item"> 
 								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
 								<ul class="dropdown-menu">
-									<li class="nav-item">
-										<a href="tutorials.html" class="nav-link">Tutorials</a>
-									</li>
+ 
 									<li class="nav-item">
 										<a href="best-practices.html" class="nav-link">Best Practices</a>
 									</li>
@@ -220,7 +218,7 @@
 
 							<p>You start calling with confidence, with no need to set up Dialers, or hope that the lead information is accurate.</p>
 							<p>You win business.</p>
-							<p>See what <span style="text-decoration: underline;">industries we create success</span></p>
+							<p>See what <a style="text-decoration: underline;" href="industries.html">industries we create success</a></p>
 
 						</div>
 
@@ -332,7 +330,7 @@
 						</div>
 						<ul class="footer-quick-links">
 							<li><a href="mailto:support@megapipelines.com">Submit a Ticket</a></li>
-							<li><a href="training-support.html">Training and Support</a></li>
+							 
 							<li><a href="contact.html">Contact Us</a></li>
 							<li><a href="privacy-policy.html">Privacy Policy</a></li>
 							<li><a href="terms-condition.html">Terms and Conditions</a></li>
