--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -87,9 +87,7 @@
 							<li class="nav-item"> 
 								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
 								<ul class="dropdown-menu">
-									<li class="nav-item">
-										<a href="tutorials.html" class="nav-link">Tutorials</a>
-									</li>
+ 
 									<li class="nav-item">
 										<a href="best-practices.html" class="nav-link">Best Practices</a>
 									</li>
@@ -140,7 +138,7 @@
 
 		<div class="container">
 
-			<div class="row">
+			<div class="row calculator">
 
 				<div class="col-lg-6 col-md-12">
 
@@ -433,6 +431,11 @@
 						</div>
 					</div>
 
+				</div>
+
+				<div class="col-lg-6 col-md-12">
+
+
 					<div>
 						<h5 class="border-bottom border-dark text-primary mt-4">Your New Commission Results</h5>
 						<div>
@@ -470,9 +473,6 @@
 						
 					</div>
 
-				</div>
-
-				<div class="col-lg-6 col-md-12">
 					<div>
 						<p>We came up with this ROI Calculator to help you visualize the impact of implementing a program with Mega Pipelines</p>
 						<p>Enter in the fields in the blue boxes below what your monthly return on investment will be by using.</p>
@@ -564,7 +564,7 @@
 						</div>
 						<ul class="footer-quick-links">
 							<li><a href="mailto:support@megapipelines.com">Submit a Ticket</a></li>
-							<li><a href="training-support.html">Training and Support</a></li>
+							 
 							<li><a href="contact.html">Contact Us</a></li>
 							<li><a href="privacy-policy.html">Privacy Policy</a></li>
 							<li><a href="terms-condition.html">Terms and Conditions</a></li>
