--- a/pricing.html
+++ b/pricing.html
@@ -61,14 +61,27 @@
 				</div>
 			</div>
 		</div>
-		<div class="techmax-nav">
+	<div class="navbar-area">
+		<div class="techmax-responsive-nav index-navber-responsive">
+			<div class="container">
+				<div class="techmax-responsive-menu">
+					<div class="logo">
+						<a href="index.html">
+							<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
+							<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="techmax-nav index-navber">
 			<div class="container">
 				<nav class="navbar navbar-expand-md navbar-light">
 					<a class="navbar-brand" href="index.html">
-						<img src="assets/img/logo.svg" class="white-logo" alt="logo">
+						<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
 						<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 					</a>
-					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
+					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 						<ul class="navbar-nav">
 							<li class="nav-item"> 
 								<a href="product.html" class="nav-link">Product</a>
@@ -108,13 +121,13 @@
 							</li>
 						</ul>
 						<div class="other-option">
- 
 							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
 						</div>
 					</div>
 				</nav>
 			</div>
 		</div>
+	</div>
 	</div>
 	<div class="page-title-area">
 		<div class="d-table">
