--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -51,26 +51,26 @@
 		</div>
 	</div>
 	<div class="navbar-area">
-		<div class="techmax-responsive-nav">
+		<div class="techmax-responsive-nav index-navber-responsive">
 			<div class="container">
 				<div class="techmax-responsive-menu">
 					<div class="logo">
 						<a href="index.html">
-							<img src="assets/img/logo.svg" class="white-logo" alt="logo">
+							<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
 							<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 						</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="techmax-nav">
+		<div class="techmax-nav index-navber">
 			<div class="container">
 				<nav class="navbar navbar-expand-md navbar-light">
 					<a class="navbar-brand" href="index.html">
-						<img src="assets/img/logo.svg" class="white-logo" alt="logo">
+						<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
 						<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 					</a>
-					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
+					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 						<ul class="navbar-nav">
 							<li class="nav-item"> 
 								<a href="product.html" class="nav-link">Product</a>
@@ -110,7 +110,6 @@
 							</li>
 						</ul>
 						<div class="other-option">
- 
 							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
 						</div>
 					</div>
