--- a/index.html
+++ b/index.html
@@ -297,33 +297,32 @@
 
 						<ul class="features-list">
 
-							<li>
+							<li onmouseover="hover1();">
 								<span>
 									<a href="mortgage-refinance.html" style="color: inherit;" class="active">Mortgage Refinance</a>
 								</span>
 							</li>
-
-							<li>
+							<li onmouseover="hover2();">
 								<span>
 									<a href="solar.html" style="color: inherit;">Solar</a>
 								</span>
 							</li>
-							<li>
+							<li onmouseover="hover3();">
 								<span>
 									<a href="personal-loan.html" style="color: inherit;">Personal Loans</a>
 								</span>
 							</li>
-							<li>
+							<li onmouseover="hover4();">
 								<span>
 									<a href="real-estate.html" style="color: inherit;">Real Estate</a>
 								</span>
 							</li>
-							<li>
+							<li onmouseover="hover5();">
 								<span>
 									<a href="homeowners-insurance.html" style="color: inherit;">Homeowners Insurance</a>
 								</span>
 							</li>													
-							<li>
+							<li onmouseover="hover6();">
 								<span>
 									<a href="home-services.html" style="color: inherit;">Home Services</a>
 								</span>
@@ -337,9 +336,9 @@
 
 				<div class="col-lg-6">
 
-					<div class="overview-image-2">
+					<div class="hover-image">
 
-						<img src="assets/img/choose-1.png" alt="image">
+						<img id="source" src="assets/img/mortgage.svg">
 
 					</div>
 
@@ -355,7 +354,7 @@
 
 	
 
-	<!-- 
+
 
 	<section class="overview-section section-padding">
 
@@ -367,7 +366,9 @@
 
 					<div class="overview-image">
 
-						<img src="assets/img/choose-2.png" alt="image">
+						<video id="video" loop autoplay muted>
+						  <source src="assets/img/video.mp4" type="video/mp4">
+						</video>
 
 					</div>
 
@@ -377,25 +378,14 @@
 
 					<div class="overview-content">
 
-						<h2>Tech Soul for your Business</h2>
+						<h2>Grow your sales now</h2>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-						<ul class="features-list">
-
-							<li> <span class="active">Discovery & Strategy</span></li>
-
-							<li> <span>UX/UI Design</span></li>
-
-							<li> <span>iOS apps (Swift)</span></li>
-
-							<li> <span>Android apps (Java)</span></li>
-
-							<li> <span>Managed IT Service</span></li>
-
-							<li> <span>Cloud Services</span></li>
-
-						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 					</div>
 
@@ -407,7 +397,7 @@
 
 	</section>
 
-	 -->
+
 
 	
 
@@ -1267,4 +1257,43 @@
 <script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/main.js"></script>
+<script type="text/javascript">
+
+	function hover1() {
+		document.getElementById("source");
+
+		source.setAttribute('src', 'assets/img/mortgage.svg');
+	}
+
+	function hover2() {
+		document.getElementById("source");
+
+		source.setAttribute('src', 'assets/img/solar.svg');
+	}
+
+	function hover3() {
+		document.getElementById("source");
+
+		source.setAttribute('src', 'assets/img/personal-loan.svg');
+	}
+
+	function hover4() {
+		document.getElementById("source");
+
+		source.setAttribute('src', 'assets/img/real-estate.svg');
+	}
+
+	function hover5() {
+		document.getElementById("source");
+
+		source.setAttribute('src', 'assets/img/home-insurance.svg');
+	}
+
+	function hover6() {
+		document.getElementById("source");
+
+		source.setAttribute('src', 'assets/img/repair.svg');
+	}
+
+</script>
 </html>
