--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
 					<div class="hover-image">
 
-						<img id="source" src="assets/img/mortgage.svg">
+						<img id="source" src="https://bigdiablo.github.io/megapipelines/assets//video.mp4">
 
 					</div>
 
@@ -1258,6 +1258,9 @@
 <script src="assets/js/wow.min.js"></script>
 <script src="assets/js/main.js"></script>
 <script type="text/javascript">
+
+	document.getElementById('video').play();
+
 
 	function hover1() {
 		document.getElementById("source");
