New video condition

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
 					<div class="overview-image">
 
-						<video id="video" loop autoplay muted>
+						<video id="video" autoplay loop muted playsinline defaultmuted preload="auto">
 						  <source src="assets/img/video.mp4" type="video/mp4">
 						</video>
 
