New default image

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
 					<div class="hover-image">
 
-						<img id="source" src="https://bigdiablo.github.io/megapipelines/assets//video.mp4">
+						<img id="source" src="assets/image/mortgage.svg">
 
 					</div>
 
