--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
 					<div class="hover-image">
 
-						<img id="source" src="assets/image/mortgage.svg">
+						<img id="source" src="assets/img/mortgage.svg">
 
 					</div>
 
