Change on images

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 						<p>These are the industries that Mega Pipelines provides incredible access to high quality sales leads.</p>
 
 
-						<ul class="features-list">
+						<ul class="features-list features-mobile">
 
 							<li onmouseover="hover1();">
 								<span>
