--- a/industries.html
+++ b/industries.html
@@ -137,7 +137,7 @@
 
 			<div class="row space-bottom">
 				<div class="col-lg-12 col-md-12 text-center">
-					<h2>Here are industries We Make <span class="color-text">Mega Pipelines Sales</span></h2>
+					<h2>Here are Industries We Make <span class="color-text">Mega Pipelines Sales</span></h2>
 				</div>
 			</div>
 
