--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 		gtag('config', 'G-WY7HSPN787');
 	</script>
+	<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
 	<div class="preloader">
@@ -338,7 +339,19 @@
 
 					<div class="hover-image">
 
+<!--
 						<img id="source" src="assets/img/mortgage.svg">
+-->
+						<lottie-player
+							src="assets/img/customer-need.json"
+							background="transparent"
+							speed="1"
+							style="width: 300px; height: 300px;"
+							loop
+							controls
+							autoplay>
+						</lottie-player>
+
 
 					</div>
 
